--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,13 @@
-[tool.poetry]
+[project]
 name = "free-translate-api"
 version = "0.1.0"
 description = ""
-authors = ["ErkamKumru"]
 readme = "README.md"
-packages = [{include = "free_translate_api"}]
+requires-python = ">=3.10"
+dependencies = [
+    "django==4.1.3",
+    "googletrans==3.1.0a0",
+    "python-dotenv>=1.1.1",
 
-[tool.poetry.dependencies]
-python = "^3.10"
-Django = "^4.1.3"
-googletrans = "3.1.0a0"
-python-dotenv = "^0.21.0"
+]
 
-
-[tool.poetry.group.dev.dependencies]
-black = "^22.10.0"
-flake8 = "^5.0.4"
-isort = "^5.10.1"
-bandit = "^1.7.4"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
