--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ requires-python = ">=3.10"
 dependencies = [
     "django==4.1.3",
     "googletrans==3.1.0a0",
+    "gunicorn>=23.0.0",
     "python-dotenv>=1.1.1",
-
 ]
 
 [dependency-groups]
