--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.9.1
 certifi==2025.8.3
+cfgv==3.4.0
 chardet==3.0.4
+distlib==0.4.0
 django==4.1.3
+filelock==3.19.1
 googletrans==3.1.0a0
+gunicorn==23.0.0
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -10,9 +14,16 @@ hstspreload==2025.1.1
 httpcore==0.9.1
 httpx==0.13.3
 hyperframe==5.2.0
+identify==2.6.13
 idna==2.10
+nodeenv==1.9.1
+packaging==25.0
+platformdirs==4.3.8
+pre-commit==4.3.0
 python-dotenv==1.1.1
+pyyaml==6.0.2
 rfc3986==1.5.0
 sniffio==1.3.1
 sqlparse==0.5.3
 typing-extensions==4.14.1
+virtualenv==20.34.0
