--- a/.github/workflows/build-and-publish-container-image.yml
+++ b/.github/workflows/build-and-publish-container-image.yml
@@ -1,4 +1,4 @@
-name: Publish Docker image
+name: Publish Docker image to GHCR
 
 on:
   workflow_dispatch:
@@ -19,15 +19,16 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: tg3w3p/free_translate_api:latest
+          tags: ${{ github.repository_owner }}/free_translate_api:latest
