--- a/.github/workflows/build-and-publish-container-image.yml
+++ b/.github/workflows/build-and-publish-container-image.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ github.repository_owner }}/free_translate_api:latest
+          tags: ghcr.io/${{ github.repository_owner }}/free_translate_api:latest
